--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,10 +6,18 @@ spring:
 
 ---
 
-  spring:
-    profiles: development
+spring:
+  profiles: development
+
   cloud:
     config:
-      discovery:
-        enabled: true
-        serviceId: configurationschool
+      uri: http://localhost:8888
+
+---
+
+spring:
+  profiles: kubernetes
+
+  cloud:
+    config:
+      uri: http://configuration-school:8888
