--- a/cloud-pipelines.yml
+++ b/cloud-pipelines.yml
@@ -14,6 +14,7 @@ test:
     - type: stubrunner
       name: classcustomerstubrunner-school
       coordinates: danceschool/classcustomerstubrunner-school:latest
+      useClasspath: true
 stage:
   # list of required services
   services:
